-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
When using a QtObject inside an item, and then we call a function in the Component.onDestruction handler of that item, we get a crash. This happens because the QDeclarativeContextData engine has been invalidated before reaching QDeclarativeExpressionPrivate::evalFunction.
The sample code zip also contains a patch, which basically consists on emitting the destruction signal before invalidating children contexts in QDeclarativeContextData::invalidate.